<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="100dp"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:shrinkColumns="1">
    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/Principle"
            android:layout_gravity="right"/>
        <EditText android:id="@+id/principle_amt"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content">
            <requestFocus></requestFocus>
        </EditText>
    </TableRow>

    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Interest_Rate"
            android:layout_gravity="right"/>
        <EditText android:id="@+id/interest_rt"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content">
            <requestFocus></requestFocus>
        </EditText>
    </TableRow>

    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Years"
            android:layout_gravity="right"/>
        <EditText android:id="@+id/years_amt"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content">
            <requestFocus></requestFocus>
        </EditText>
    </TableRow>

    <TableRow>
        <Button android:text="@string/Calculate"
            android:layout_span="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CalculatedLoan"/>
    </TableRow>

    <TableRow android:layout_marginTop="20dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monthly_Payments"
            android:gravity="right"/>
        <TextView android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:gravity="left"/>
    </TableRow>

    <TableRow>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total_Payments"
            android:gravity="right"/>
        <TextView android:id="@+id/total_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"/>
    </TableRow>
</TableLayout>



